# bait

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.server.yml
.github/workflows/: ci.yml
crates/bait-cli/: Cargo.toml
crates/bait-cli/i18n/: bn.toml  en.toml  hi.toml  ta.toml  te.toml
crates/bait-cli/src/: locale.rs  main.rs
crates/bait-core/: Cargo.toml
crates/bait-core/src/: ai_index.rs  bait.code-workspace  branch.rs  collab.rs  ignore.rs  index.rs  lib.rs  merge.rs  objects.rs  oplog.rs  repo.rs  stat_cache.rs  store.rs
crates/bait-server/: Cargo.toml  Dockerfile
crates/bait-server/src/: main.rs
crates/bait-web/: Cargo.toml
crates/bait-web/src/: main.rs
scripts/: bench_ai_agent_savings.sh  bench_ai_agent_suite.sh  bench_ai_symbol_lookup.sh
