[workspace]
members = [
    "crates/bait-core",
    "crates/bait-cli",
    "crates/bait-server",
    "crates/bait-web",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
repository  = "https://github.com/techdwarfs/bait"
description = "Bharat's Autonomous Integrated Tracker — a new kind of version control"

[workspace.dependencies]
anyhow      = "1"
thiserror   = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
bincode     = "1"
toml        = "0.8"
blake3      = "1"
zstd        = "0.13"
walkdir     = "2"
globset     = "0.4"
similar     = "2"
diffy       = "0.3"
chrono      = { version = "0.4", features = ["serde"] }
clap        = { version = "4", features = ["derive"] }
colored     = "2"
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["trace"] }
