[workspace]
members = [
    "crates/bait-core",
    "crates/bait-cli",
    "crates/bait-server",
    "crates/bait-web",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
repository  = "https://github.com/techdwarfs/bait"
description = "Bharat's Autonomous Integrated Tracker — a new kind of version control"

[workspace.dependencies]
anyhow      = "1"
thiserror   = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
bincode     = "1"
toml        = "0.8"
blake3      = "1"
zstd        = "0.13"
walkdir     = "2"
globset     = "0.4"
similar     = "2"
diffy       = "0.3"
chrono      = { version = "0.4", features = ["serde"] }
clap        = { version = "4", features = ["derive"] }
colored     = "2"
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["trace"] }
# Tree-sitter runtime (all grammar crates use tree-sitter-language ^0.1 ABI)
tree-sitter            = "0.26"
# Official grammar crates — ordered by tier-1 languages first
tree-sitter-rust       = "0.24"
tree-sitter-python     = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-java       = "0.23"
tree-sitter-go         = "0.25"
tree-sitter-cpp        = "0.23"
tree-sitter-c          = "0.24"
tree-sitter-c-sharp    = "0.23"
tree-sitter-ruby       = "0.23"
tree-sitter-scala      = "0.26"
tree-sitter-php        = "0.24"
tree-sitter-bash       = "0.25"
tree-sitter-elixir     = "0.3"
tree-sitter-lua        = "0.5"
tree-sitter-swift      = "0.7"
tree-sitter-haskell    = "0.23"
tree-sitter-r          = "1"
