[package]
name        = "bait"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
description = "BAIT — Bharat's Autonomous Integrated Tracker CLI"

[[bin]]
name = "bait"
path = "src/main.rs"

[dependencies]
bait-core        = { path = "../bait-core" }
anyhow.workspace = true
clap.workspace   = true
colored.workspace = true
serde.workspace  = true
serde_json.workspace = true
toml.workspace   = true
chrono.workspace = true
walkdir.workspace = true
globset.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
