[package]
name        = "bait-core"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
description = "Core library for the BAIT version control system"

[dependencies]
anyhow.workspace     = true
thiserror.workspace  = true
serde.workspace      = true
serde_json.workspace = true
bincode.workspace    = true
toml.workspace       = true
blake3.workspace     = true
zstd.workspace       = true
walkdir.workspace    = true
globset.workspace    = true
similar.workspace    = true
diffy.workspace      = true
chrono.workspace     = true
