[package]
name        = "bait-core"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
description = "Core library for the BAIT version control system"

[dependencies]
anyhow.workspace     = true
thiserror.workspace  = true
serde.workspace      = true
serde_json.workspace = true
bincode.workspace    = true
toml.workspace       = true
blake3.workspace     = true
zstd.workspace       = true
walkdir.workspace    = true
globset.workspace    = true
similar.workspace    = true
diffy.workspace      = true
chrono.workspace     = true
tree-sitter.workspace            = true
tree-sitter-rust.workspace       = true
tree-sitter-python.workspace     = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-java.workspace       = true
tree-sitter-go.workspace         = true
tree-sitter-cpp.workspace        = true
tree-sitter-c.workspace          = true
tree-sitter-c-sharp.workspace    = true
tree-sitter-ruby.workspace       = true
tree-sitter-scala.workspace      = true
tree-sitter-php.workspace        = true
tree-sitter-bash.workspace       = true
tree-sitter-elixir.workspace     = true
tree-sitter-lua.workspace        = true
tree-sitter-swift.workspace      = true
tree-sitter-haskell.workspace    = true
tree-sitter-r.workspace          = true
