[package]
name        = "bait-web"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
description = "BAIT web UI — browser interface for bait repositories"

[[bin]]
name = "bait-web"
path = "src/main.rs"

[dependencies]
bait-core = { path = "../bait-core" }
anyhow.workspace = true
